<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">مکانیکال</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">مکانیکال</string>
    <string name="text01">تاسیسات مکانیکی</string>
    <string name="strMenu">منو</string>
    <string name="strMain">تالار تاسیسات مکانیکی ایران</string>
    <string name="ostan">انتخاب استان</string>
    <string name="object">انتخاب برند</string>
    <string name="city">انتخاب شهر</string>
    <string name="brand">معرفی برندها</string>
    <string name="advisor">مشاوران-ناظران</string>
    <string name="Executertyper">شرکتهای مجری</string>
    <string name="News">نشریات-مقالات واخبار</string>
    <string name="Propaganda">آگهی وتبلیغات</string>
    <string name="favorite">پسند شده ها</string>
    <string name="Forums">تالار گفتگو</string>
    <string name="Post">پست گذاری</string>
    <string name="Tube">لوله واتصالات</string>
    <string name="SmartTube">لوله واتصالات هوشمند</string>
    <string name="FivelayerTube">لوله واتصالات پنج لایه</string>
    <string name="SullagePVC">لوله واتصالات فاضلابیPVC </string>
    <string name="PushFit">لوله واتصالات پوش فیت</string>
    <string name="Floorheating">گرمایش وسرمایش از کف</string>
    <string name="Heatingandcooling">سیستمهای سرمایشی وگرمایشی</string>
    <string name="Airconditioning">سیستمهای تهویه مطبوع</string>
    <string name="PackagedWater">پکیج-آبگرمکن</string>
    <string name="Radiator">رادیاتورها</string>
    <string name="Package">پکیج ها</string>
    <string name="Water">آبگرمکن ها</string>
    <string name="AluminumRadiator">رادیاتورهای آلمینیومی</string>
    <string name="Radiatorpanely">رادیاتور های پنلی</string>
    <string name="RadiatorSteel">رادیاتورهای فولادی</string>
    <string name="RadiatorElectric">رادیاتور های برقی</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="news">اخبار</string>
    <string name="anad">تالار </string>
    <string name="showad">تالار خرید</string>
    <string name="txtanad">درج آگهی شما </string>
    <string name="search">جستجو </string>
    <string name="txtanadedite">ویرایش آگهی </string>
    <string name="txtanadedate">اطلاعات تماس </string>
    <string name="txtanadreport">گزارش </string>
    <string name="instagram">Instagram</string>
    <string name="site">Stie</string>
    <string name="google_plus">Google+</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkdIn</string>
    <string name="start_app">Starting application:</string>
    <string name="cancel">انصراف</string>
    <string name="save">ذخیره</string>
    <string name="saving_image">ذخیره سازی عکس</string>
    <string name="preparing_card">اماده سازی کارت حافظه</string>
    <string name="no_storage_card">کارت حافظه موجود نیست.</string>
    <string name="not_enough_space">فضای کافی در اختیار نیست.</string>
    <string name="center_click">Center has been clicked</string>
    <string name="text_fa">مجموعه رادکام از سال 1377 با هدف فعالیت در زمینه نرم‌افزار پا به عرصه وجود نهاد و در سال 1379 همگام با آغاز رشد روز افزون کاربرد اینترنت در دنیا، به طور تخصصی فعالیت خود را در زمینه ثبت‌دامنه، هاست و سرور اختصاصی و نیز طراحی سایت و پورتال سازمانی متمرکزساخت.

در این گذار ، چالش عمده ای پیش روی ما بود، چون می‌بایست کارهایی عرضه‌کنیم که در کنار کارهای دیگران از سراسر دنیا بر یک محمل قرار‌گیرند و بالطبع توقعات روز‌افزون مشتریان ما را برآورده‌سازد.

بالا‌بردن کیفیت کارهای ارائه‌شده در چهارچوب استانداردهای حاکم در دنیا، امری نبود که به طور اتفاقی حاصل‌گردد. دیدگاه بلندمدت در تحقیق، تولید، عرضه و پشتیبانی از جمله نگرش راهبردی ما در کار است، نگرشی که به شهادت آنچه انجام‌گرفته‌است برای مجموعه رادکام تخصص و برای مشتریان آن رضایت را به همراه داشته‌است.</string>

    <string-array name="MenuItems">
        <item name="home">خانه</item>
        <item name="users">کاربری</item>
        <item name="home2">صفحه شخصی</item>
        <item name="home3">برای تست</item>
        <item name="home4">درباره ما</item>
        <item name="home5">تماس با ما</item>
    </string-array>

    <string name="ostantxt1">انتخاب استان</string>
    <string name="citytxt1">انتخاب شهر</string>
    <string name="searchHint">متن جستجو را وارد کنید...</string>

    <string-array name="news">
        <item name="news_1">نشریات</item>
        <item name="news_2">مقالات</item>
        <item name="news_3">اخبار</item>
    </string-array>

    <string name="shart">1-شرایط اول
2x xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxc fgnghnfnjdfhdghشرایط دوم
3-یلایلااااااااااااااااااااااااااااااااااایبنملدتنشملدمنلد/مقتلهصقتلصنلبئص.یسلبئمسنلبئسنمبئببسشرایط سوم
4ghdghghdghdghdghdghdghgdhشرایط چهارم
5-لذبیبطططططططططططططططیلیبلللللللللللللللللللللللللللللیطزرررررررررررررررررررررررررررررررررررررربلطططططططططططططططططططشرایط پنجم
6-شرایط ششم</string>
    <string name="tabligh">&quot;&quot;شرایط درج بیلبورد تبلیغاتی&quot;&quot;</string>
    <string name="toast_text_1">خطا</string>
    <string name="toast_text_2">لطفا فیلدهای اجباری را پر نمایید.</string>
    <string name="title_activity_croping_option_adapter">CropingOptionAdapter</string>

</resources>